<resources>
    <string name="app_name">mobile-wallet</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="complete_payment_solution">A complete payments solution for</string>
    <string name="all_size_business">all size business</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="powered_by">Powered By &#160;</string>
    <string name="rbl_bank">RBL BANK</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="confirm_mobile_number_message">To confirm your mobile number \n we need to send an
        SMS from \n your phone*
    </string>
    <string name="choose_your_sim">Please choose your SIM</string>
    <string name="sim_provider">VODAFONE_IN</string>
    <string name="sim_airtel">AIRTEL_IN</string>
    <string name="or">or</string>
    <string name="regular_charges_will_apply">*Regular charges will apply</string>
    <string name="send_sms">Send SMS</string>
    <string name="already_have_account">Already have an account? &#160;</string>
    <string name="sign_in">Sign In</string>
    <string name="search_text">Search Text</string>
    <string name="popular_banks">Popular Banks</string>
    <string name="other_banks">Other Banks</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="account_number">XXXXXXXXXXXX1234</string>
    <string name="name_txt">Name</string>
    <string name="account_holder_name">Devang Mehta</string>
    <string name="account_type_txt">Account Type</string>
    <string name="branch_txt">Branch</string>
    <string name="branch">Lower Parel, Mumbai</string>
    <string name="upi_pin_suggestion">You need to set UPI PIN to securely do transaction from your
        bank account
    </string>
    <string name="upi_pin_debit_credit_card">Set UPI PIN easily using your \n debit / ATM card
    </string>
    <string name="upi_pin_set">Set Up PIN</string>
    <string name="upi_pin_already">I HAVE UPI PIN</string>
    <string name="upi_pin_later">IʼLL SET LATER</string>
    <string name="owner_txt">Owner</string>
    <string name="agent_txt">Agent</string>
    <string name="full_name_txt">Full Name</string>
    <string name="email_txt">Email</string>
    <string name="business_name_txt">Business Name</string>
    <string name="address_txt">Address</string>
    <string name="pin_code_txt">PIN Code</string>
    <string name="pan_txt">PAN</string>
    <string name="add_txt">Add</string>
    <string name="aadhar_number_txt">Aadhar Number</string>
    <string name="next_txt">Next</string>
    <string name="pixie_pay_txt">Pixie Pay</string>
    <string name="username_txt">User Name</string>
    <string name="password_txt">Password</string>
    <string name="success_txt">Success!</string>
    <string name="congo_txt">Congratulations!</string>
    <string name="accept_payment_message">You can start accepting payments</string>
    <string name="pixie_company_name">Pixie Pay Pvt Ltd</string>
    <string name="merchant_id_txt">Merchant ID</string>
    <string name="merchant_id">20001212</string>
    <string name="terminal_id_txt">Terminal ID</string>
    <string name="terminal_id">007</string>
    <string name="start_accept_message">Start accepting payments</string>
    <string name="config_payment">Configure Payment Types</string>
    <string name="qr_code">QR code details</string>
    <string name="user_details_txt">User Details</string>
    <string name="vpa_txt">Virtual Payment Address</string>
    <string name="verify_aadhar_no">Verify Aadhar Number</string>
    <string name="enter_aadhar_no">Enter your Aadhar Number</string>
    <string name="cancel_txt">Cancel</string>
    <string name="verify_txt">Verify</string>
    <string name="verify_pan_no">Verify PAN number</string>
    <string name="enter_pan_no">Enter your Pan card number</string>
    <string name="gen_pin">Generate PIN</string>
    <string name="enter_pin">Enter the pin</string>
    <string name="reEnter_pin">Re enter the pin</string>
    <string name="create_pin">Create PIN</string>
    <string name="scan_fingerprint">Scan customer\'s fingerprint</string>
    <string name="scan_fingerprint_message">Scan customer\'s fingerprint to authorise the
        transaction
    </string>
    <string name="wait_fingerprint_message">Waiting for fingerprint scanner to be connected</string>
    <string name="done_txt">Done</string>
    <string name="auto_otp_message">Auto detecting one time password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="total_txt">Total</string>
    <string name="rupee_sign">₹</string>
    <string name="zero">0</string>
    <string name="pay_using_message">Pay Using</string>
    <string name="customer_aadhar_no">Customer\'s Aadhar number</string>
    <string name="connect_jack_message">Connect - Jack</string>
    <string name="gen_qr">Generate QR with payment link</string>
    <string name="send_sms_payment">Send SMS with payment link</string>
    <string name="vpa_txt2">VPA (Virtual Payment Address)</string>
    <string name="enter_vpa">Enter the vpa</string>
    <string name="request_txt">Request</string>
    <string name="select_acc">Select Account</string>
    <string name="cvv">CVV</string>


    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
