<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:text="@string/verify_mobile_number"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"/>

    <TextView
        android:gravity="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_15dp"
        android:layout_width="wrap_content"
        android:text="@string/confirm_mobile_number_message"
        android:textColor="@color/colorPrimary"/>


    <TextView
        android:gravity="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_30dp"
        android:layout_width="wrap_content"
        android:text="@string/choose_your_sim"
        android:textColor="@color/colorPrimary"/>


    <LinearLayout
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_30dp"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:drawablePadding="@dimen/value_15dp"
            android:drawableTop="@drawable/big_sim_card"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/value_30dp"
            android:layout_marginRight="@dimen/value_30dp"
            android:layout_width="wrap_content"
            android:text="@string/sim_provider"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/or"
            android:textColor="@color/gray"/>

        <TextView
            android:drawablePadding="@dimen/value_15dp"
            android:drawableTop="@drawable/big_sim_card"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/value_30dp"
            android:layout_marginStart="@dimen/value_30dp"
            android:layout_width="wrap_content"
            android:text="@string/sim_airtel"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <TextView
        android:gravity="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_30dp"
        android:layout_width="wrap_content"
        android:text="@string/regular_charges_will_apply"
        android:textColor="@android:color/black"/>

    <Button
        android:background="@drawable/button_round_primary"
        android:clickable="true"
        android:id="@+id/btn_send_sms"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_30dp"
        android:layout_width="250dp"
        android:text="@string/send_sms"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:typeface="sans"/>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/txt_signin"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>