<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/value_100dp"
        android:text="@string/pixie_pay_txt"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/value_30dp"
        android:text="@string/complete_payment_solution"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/all_size_business"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/value_70dp"
        android:background="@drawable/button_round_white"
        android:clickable="true"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:typeface="sans"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/value_20dp"
        android:background="@drawable/button_round_stroke"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:typeface="sans"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/powered_by"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/rbl_bank"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>