<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/value_20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_aadhar_no"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/value_10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_30dp">

        <EditText android:id="@+id/et_aadhar_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_aadhar_no" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="@dimen/value_30dp"
        android:layout_marginBottom="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_10dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_txt"
            android:background="@color/grey_900"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_txt"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/value_30dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>