<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:layout_marginLeft="@dimen/value_30dp"
              android:layout_marginRight="@dimen/value_30dp"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/customer_aadhar_no"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>


    <EditText
        android:id="@+id/et_aadhar_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789 -"
        android:hint="@string/aadhar_number_txt"
        android:inputType="number"
        android:textSize="@dimen/value_16sp"/>

    <Button
        android:id="@+id/btn_scan_fp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_round_primary"
        android:clickable="true"
        android:text="@string/scan_fingerprint"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:typeface="sans"/>

</LinearLayout>