<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/value_20dp">

    <TextView
        android:id="@+id/tv_auto_detect_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/value_10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/auto_otp_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/value_20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_30dp">

        <EditText android:id="@+id/et_sms_otp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_otp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_10dp"
        android:layout_marginTop="@dimen/value_30dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey_900"
            android:text="@string/cancel_txt"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/value_30dp"
            android:background="@color/colorPrimary"
            android:text="@string/verify_txt"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>