<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pixie_pay_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textSize="35sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:textColorHint="@android:color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText android:id="@+id/et_username"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/username_txt"
                      android:inputType="textEmailAddress"
                      android:theme="@style/Theme.AppCompat"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="@android:color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText android:id="@+id/et_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password_txt"
                      android:inputType="textPassword"
                      android:theme="@style/Theme.AppCompat"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/button_round_white"
            android:text="@string/login"/>

    </LinearLayout>

</RelativeLayout>