<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/value_20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/scan_fingerprint_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/black"/>

    <ImageView
        android:id="@+id/iv_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/value_10dp"
        android:layout_marginTop="@dimen/value_40dp"
        android:background="@drawable/circle"
        android:elevation="4dp"/>

    <TextView
        android:id="@+id/tv_fp_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value_30dp"
        android:layout_marginLeft="@dimen/value_30dp"
        android:layout_marginRight="@dimen/value_30dp"
        android:layout_marginTop="@dimen/value_30dp"
        android:text="@string/wait_fingerprint_message"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_10dp"
        android:layout_marginTop="@dimen/value_30dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey_900"
            android:text="@string/cancel_txt"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/value_30dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/value_10dp"
            android:paddingRight="@dimen/value_10dp"
            android:text="@string/done_txt"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>