<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:focusable="true"
                  android:focusableInTouchMode="true"
                  android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/total_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rupee_sign"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_invoice_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="number"
                        android:text="@string/zero"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="#22000000"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/pay_using_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_payment_methods"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clipToPadding="false"
            android:paddingLeft="20dp"/>


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_15dp"/>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
